--- a/FMI_Parking_System/frontend/login/login_form.html
+++ b/FMI_Parking_System/frontend/login/login_form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,40 +9,112 @@
     <script defer src="javascript/send_user_data.js"></script>
     <title>Login</title>
 </head>
+
 <body>
-    <main>
-        <!-- log in page header -->
-        <header>
-            <h1 id="system-name-header">Система за паркиране във ФМИ</h1>
-        </header>
 
-        <!-- log in form -->
-        <form id="login-form">
+    <!-- log in page header -->
+    <header>
+        <h2 id="system-name-header">Система за паркиране във ФМИ</h2>
+    </header>
+    <div class="container" id="container">
+        <div class="form-container sign-in-container">
+            <!-- log in form -->
+            <form id="login-form">
+                <h1>Вход в системата</h1>
+                <!-- email -->
+                <!-- <div class="form-item"> -->
+                <!-- <label for="email"><span>Имейл:</span></label> -->
+                <input type="email" placeholder="Имейл" required name="email" id="email">
+                <!-- </div> -->
 
-            <!-- email -->
-            <div class="form-item">
-                <label for="email"><span>Имейл:</span></label>
-                <input type="email" placeholder="въведете имейл" required name="email" id="email">
+                <!-- password -->
+                <!-- <div class="form-item"> -->
+                <!-- <label for="password"><span>Парола:</span></label> -->
+                <input type="password" placeholder="Парола" required name="password" id="password">
+                <!-- </div> -->
+
+                <!-- submit button -->
+                <!-- <div class="form-item button-container"> -->
+                <button type="submit" id="login-button" onclick="login()">Вход</button>
+                <!-- </div> -->
+
+                <!-- response when a field was incorrect -->
+                <div class="form-item no-show" id="response-message">
+                </div>
+            </form>
+        </div>
+        <div class="form-container sign-up-container">
+            <form id="registration-form">
+                <h1>Създай акаунт</h1>
+                <!-- First name -->
+                <!-- <div class="form-item"> -->
+                <!-- <label for="firstname"><span>Име:</span></label> -->
+                <input type="text" placeholder="Име" autocomplete="off" required name="firstname" id="firstname">
+                <!-- </div> -->
+
+                <!-- Family name -->
+                <!-- <div class="form-item"> -->
+                <!-- <label for="lastname"><span>Фамилия:</span></label> -->
+                <input type="text" placeholder="Фамилия" autocomplete="off" required name="lastname" id="lastname">
+                <!-- </div> -->
+
+                <!-- E-mail -->
+                <!-- <div class="form-item"> -->
+                <!-- <label for="email"><span>Имейл:</span></label> -->
+                <input type="email" placeholder="Имейл" required name="email" id="email">
+                <!-- </div> -->
+
+                <!-- Password -->
+                <!-- <div class="form-item"> -->
+                <!-- <label for="password"><span>Парола:</span></label> -->
+                <input type="password" placeholder="Парола" required name="password" id="password">
+                <!-- </div> -->
+
+                <!-- Repeated password -->
+                <!-- <div class="form-item"> -->
+                <!-- <label for="repeat-password"><span>Повторете паролата:</span></label> -->
+                <input type="password" placeholder="Повторете паролата" required name="repeat_password"
+                    id="repeat-password">
+                <!-- </div> -->
+
+                <!-- User type -->
+                <!-- <div class="form-item"> -->
+                <!-- <label for="user-type"><span>Тип:</span></label> -->
+                <select name="user_type" id="user-type" class="custom-select">
+                    <option value="Щатен преподавател">Щатен преподавател</option>
+                    <option value="Хоноруван преподавател">Хоноруван преподавател</option>
+                    <option value="Студент">Студент</option>
+                </select>
+                <!-- </div> -->
+
+                <!-- Submit button -->
+                <!-- <div class="form-item button-container"> -->
+                <button type="submit" id="register-button" onclick="register()">Регистриране</button>
+                <!-- </div> -->
+
+                <!-- Response message -->
+                <div class="form-item no-show" id="response-message">
+                </div>
+            </form>
+        </div>
+        <div class="overlay-container">
+            <div class="overlay">
+                <div class="overlay-panel overlay-left">
+                    <h1>Здравейте отново!</h1>
+                    <p>За да използвате функционалностите на системата, моля влезте във вашия профил.</p>
+                    <button class="ghost" id="signIn">Вход</button>
+                </div>
+                <div class="overlay-panel overlay-right">
+                    <h1>Здравейте!</h1>
+                    <p>Създайте своя профил в системата.</p>
+                    <button class="ghost" id="signUp">Регистрация</button>
+                </div>
             </div>
+        </div>
+    </div>
+    <!-- button for redirection over to the registration page in case the user doesn't have account -->
+    <button type="button" id="to-registration-btn"></button>
 
-            <!-- password -->
-            <div class="form-item">
-                <label for="password"><span>Парола:</span></label>
-                <input type="password" placeholder="въведете парола" required name="password" id="password">
-            </div>
-
-            <!-- submit button -->
-            <div class="form-item button-container">
-                <button type="submit" id="login-button">Вход</button>
-            </div>
-
-            <!-- response when a field was incorrect -->
-            <div class="form-item no-show" id="response-message">
-            </div>
-        </form>
-
-        <!-- button for redirection over to the registration page in case the user doesn't have account -->
-        <button type="button" id="to-registration-btn">Регистрация</button>
-    </main>
 </body>
+
 </html>
