--- a/FMI_Parking_System/frontend/login/login_form.html
+++ b/FMI_Parking_System/frontend/login/login_form.html
@@ -16,9 +16,10 @@
 
 <body>
 
-  <!-- log in page header -->
+  <!-- log in and register page header-->
   <header>
     <h2 id="system-name-header">Система за паркиране във ФМИ</h2>
+    <img src="images/Logo.png" alt="Parking system logo">
   </header>
   <div class="container"
        id="container">
@@ -27,31 +28,26 @@
       <form id="login-form">
         <h1>Вход в системата</h1>
         <!-- email -->
-        <!-- <div class="form-item"> -->
-        <!-- <label for="email"><span>Имейл:</span></label> -->
+
         <input type="email"
                placeholder="Имейл"
                required
                name="email-login"
                id="email">
-        <!-- </div> -->
 
         <!-- password -->
-        <!-- <div class="form-item"> -->
-        <!-- <label for="password"><span>Парола:</span></label> -->
         <input type="password"
                placeholder="Парола"
                required
                name="password-login"
                id="password">
-        <!-- </div> -->
+
 
         <!-- submit button -->
-        <!-- <div class="form-item button-container"> -->
         <button type="submit"
                 id="login-button"
                 onclick="login()">Вход</button>
-        <!-- </div> -->
+
 
         <!-- response when a field was incorrect -->
         <div class="form-item no-show"
@@ -62,78 +58,51 @@
     <div class="form-container sign-up-container">
       <form id="registration-form">
         <h1>Създай акаунт</h1>
-        <!-- First name -->
-        <!-- <div class="form-item"> -->
-        <!-- <label for="firstname"><span>Име:</span></label> -->
+
         <input type="text"
                placeholder="Име"
                autocomplete="off"
                required
                name="firstname"
                id="firstname">
-        <!-- </div> -->
 
-        <!-- Family name -->
-        <!-- <div class="form-item"> -->
-        <!-- <label for="lastname"><span>Фамилия:</span></label> -->
         <input type="text"
                placeholder="Фамилия"
                autocomplete="off"
                required
                name="lastname"
                id="lastname">
-        <!-- </div> -->
 
-        <!-- E-mail -->
-        <!-- <div class="form-item"> -->
-        <!-- <label for="email"><span>Имейл:</span></label> -->
         <input type="email"
                placeholder="Имейл"
                required
                name="email-register"
                id="email">
-        <!-- </div> -->
 
-        <!-- Password -->
-        <!-- <div class="form-item"> -->
-        <!-- <label for="password"><span>Парола:</span></label> -->
         <input type="password"
                placeholder="Парола"
                required
                name="password-register"
                id="password">
-        <!-- </div> -->
 
-        <!-- Repeated password -->
-        <!-- <div class="form-item"> -->
-        <!-- <label for="repeat-password"><span>Повторете паролата:</span></label> -->
         <input type="password"
                placeholder="Повторете паролата"
                required
                name="repeat_password"
                id="repeat-password">
-        <!-- </div> -->
 
-        <!-- User type -->
-        <!-- <div class="form-item"> -->
-        <!-- <label for="user-type"><span>Тип:</span></label> -->
         <select name="user_type"
                 id="user-type"
                 class="custom-select">
           <option value="Щатен преподавател">Щатен преподавател</option>
           <option value="Хоноруван преподавател">Хоноруван преподавател</option>
-          <option value="Студент">Студент</option>
+          <!-- <option value="Студент">Студент</option> -->
         </select>
-        <!-- </div> -->
 
-        <!-- Submit button -->
-        <!-- <div class="form-item button-container"> -->
         <button type="submit"
                 id="register-button"
                 onclick="register()">Регистриране</button>
-        <!-- </div> -->
-
-        <!-- Response message -->
+ 
         <div class="form-item no-show"
              id="response-message">
         </div>
