--- a/FMI_Parking_System/frontend/map/zones - Copy.html
+++ b/FMI_Parking_System/frontend/map/zones - Copy.html
@@ -18,124 +18,139 @@
     <main>
         <div class="left-right-wrapper">
             <div class="left">
-                        <!-- Slideshow -->
-        <div class="slideshow-container">
-            <div class="mySlides fade" id="FZF">
-                <div id="Bbuttons">
-                <button class="space" id="B0">B<br>0</button>
-                <button class="space" id="B1">B<br>1</button>
-                <button class="space" id="B2">B<br>2</button>
-                <button class="space" id="B3">B<br>3</button>
-                <button class="space" id="B4">B<br>4</button>
-                <button class="space" id="B5">B<br>5</button>
-                <button class="space" id="B6">B<br>6</button>
-                <button class="space" id="B7">B<br>7</button>
-                <button class="space" id="B8">B<br>8</button>
-                <button class="space" id="B9">B<br>9</button>
-                </div>
-                <!-- <div class="text">ФзФ</div>
+                <!-- Slideshow -->
+                <div class="slideshow-container">
+
+                    <!-- First slide -->
+                    <div class="mySlides fade" id="FMI">
+                        <!-- <div class="text">ФМИ</div> -->
+                        <!-- <img src="./images/fmi.png" class="zoomedZones border" alt="zoneA"> -->
+                        <button class="space" id="A0">A<br>0</button>
+                        <button class="space" id="A1">A<br>1</button>
+                        <button class="space" id="A2">A<br>2</button>
+                        <button class="space" id="A3">A<br>3</button>
+                        <button class="space" id="A4">A<br>4</button>
+                        <button class="space" id="A5">A<br>5</button>
+                        <button class="space" id="A6">A<br>6</button>
+                        <button class="space" id="A7">A<br>7</button>
+                        <button class="space" id="A8">A<br>8</button>
+                        <button class="space" id="A9">A<br>9</button>
+                        <!-- <div class="numbertext">1 / 3</div> -->
+                    </div>
+
+                    <!-- Second slide -->
+                    <div class="mySlides fade" id="FZF">
+                        <button class="space" id="B0">B<br>0</button>
+                        <button class="space" id="B1">B<br>1</button>
+                        <button class="space" id="B2">B<br>2</button>
+                        <button class="space" id="B3">B<br>3</button>
+                        <button class="space" id="B4">B<br>4</button>
+                        <button class="space" id="B5">B<br>5</button>
+                        <button class="space" id="B6">B<br>6</button>
+                        <button class="space" id="B7">B<br>7</button>
+                        <button class="space" id="B8">B<br>8</button>
+                        <button class="space" id="B9">B<br>9</button>
+                        <button class="space" id="B10">B<br>10</button>
+                        <button class="space" id="B11">B<br>11</button>
+                        <button class="space" id="B12">B<br>12</button>
+                        <button class="space" id="B13">B<br>13</button>
+                        <button class="space" id="B14">B<br>14</button>
+                        <button class="space" id="B15">B<br>15</button>
+                        <!-- <div class="text">ФзФ</div>
                 <img src="./images/fzf.png" class="zoomedZones border" alt="zoneB">
                 <div class="numbertext">2 / 3</div> -->
-            </div>
-            <!-- First slide -->
-            <div class="mySlides fade" id="FMI">
-                <!-- <div class="text">ФМИ</div> -->
-                <!-- <img src="./images/fmi.png" class="zoomedZones border" alt="zoneA"> -->
-                <button class="space" id="A0">A<br>0</button>
-                <button class="space" id="A1">A<br>1</button>
-                <button class="space" id="A2">A<br>2</button>
-                <button class="space" id="A3">A<br>3</button>
-                <button class="space" id="A4">A<br>4</button>
-                <button class="space" id="A5">A<br>5</button>
-                <button class="space" id="A6">A<br>6</button>
-                <button class="space" id="A7">A<br>7</button>
-                <button class="space" id="A8">A<br>8</button>
-                <button class="space" id="A9">A<br>9</button>
-                <!-- <div class="numbertext">1 / 3</div> -->
-            </div>
+                    </div>
 
-            <!-- Second slide -->
-
-
-            <!-- Third slide -->
-            <div class="mySlides fade" id="FHF">
-                <!-- <div class="text">ФХФ</div>
+                    <!-- Third slide -->
+                    <div class="mySlides fade" id="FHF">
+                        <button class="space" id="C0">C<br>0</button>
+                        <button class="space" id="C1">C<br>1</button>
+                        <button class="space" id="C2">C<br>2</button>
+                        <button class="space" id="C3">C<br>3</button>
+                        <button class="space" id="C4">C<br>4</button>
+                        <button class="space" id="C5">C<br>5</button>
+                        <button class="space" id="C6">C<br>6</button>
+                        <button class="space" id="C7">C<br>7</button>
+                        <button class="space" id="C8">C<br>8</button>
+                        <button class="space" id="C9">C<br>9</button>
+                        <button class="space" id="C10">C<br>10</button>
+                        <button class="space" id="C11">C<br>11</button>
+                        <button class="space" id="C12">C<br>12</button>
+                        <button class="space" id="C13">C<br>13</button>
+                        <button class="space" id="C14">C<br>14</button>
+                        <button class="space" id="C15">C<br>15</button>
+                        <button class="space" id="C16">C<br>16</button>
+                        <button class="space" id="C17">C<br>17</button>
+                        <!-- <div class="text">ФХФ</div>
                 <img src="./images/fhf.png" class="zoomedZones border" alt="zoneC">
                 <div class="numbertext">3 / 3</div> -->
-            </div>
+                    </div>
 
-            <!-- Fourth slide -->
-            <!-- <div class="mySlides fade">
-                <div class="numbertext">4 / 4</div>
-                <img src="./images/dzone.png" class="zoomedZones border" alt="zoneD">
-                <div class="text">ФМИ главен вход</div>
-            </div> -->
-
-            <!-- Pointers for next and previous slide -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-        </div>
+                    <!-- Pointers for next and previous slide -->
+                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                </div>
             </div>
             <div class="right">
                 <h2 class="text">Изберете зона</h2>
-                        <!-- Zone buttons -->
-        <div class="btn-container">
-            <img src="./images/zA.png" alt="btnA" class="btn" onclick="currentSlide(1)"></img>
-            <img src="./images/zB.png" alt="btnB" class="btn" onclick="currentSlide(2)"></img>
-            <img src="./images/zC.png" alt="btnC" class="btn" onclick="currentSlide(3)"></img>
-            <!-- <img src="./images/zD.png" alt="btnD" class="btn" onclick="currentSlide(4)"></img> -->
-        </div>
-
-        <!-- Form for querying available places in a specific time period -->
-        <form id="search-form">
-
-            <!-- Form header -->
-            <header id="form-header">
-                <h2 class="text">Изберете времеви интервал</h2>
-            </header>
-
-            <!-- The form itself -->
-            <section id="form-inputs">
-
-                <!-- Date for the query -->
-                <div class="form-item">
-                    <label for="date" class="text">Дата:</label>
-                    <input type="date" name="date" id="date">
+                <!-- Zone buttons -->
+                <div class="btn-container">
+                    <img src="./images/zA.png" alt="btnA" class="btn" onclick="currentSlide(1)"></img>
+                    <img src="./images/zB.png" alt="btnB" class="btn" onclick="currentSlide(2)"></img>
+                    <img src="./images/zC.png" alt="btnC" class="btn" onclick="currentSlide(3)"></img>
+                    <!-- <img src="./images/zD.png" alt="btnD" class="btn" onclick="currentSlide(4)"></img> -->
                 </div>
 
-                <div class="interval-wrapper">
-                <!-- The beggining of the time interval -->
-                <div class="form-item">
-                    <label for="start-time" class="text">От:</label>
+                <!-- Form for querying available places in a specific time period -->
+                <form id="search-form">
 
-                    <!-- Its options are created dynamically -->
-                    <select name="start-time" id="start-time">
-                    </select>
-                </div>
+                    <!-- Form header -->
+                    <header id="form-header">
+                        <h2 class="text">Изберете времеви интервал</h2>
+                    </header>
 
-                <!-- The end of the time interval -->
-                <div class="form-item">
-                    <label for="end-time" class="text">До:</label>
+                    <!-- The form itself -->
+                    <section id="form-inputs">
 
-                    <!-- Its options are created dynamically -->
-                    <select name="end-time" id="end-time">
-                    </select>
-                </div>
-            </div>
+                        <!-- Date for the query -->
+                        <div class="form-item">
+                            <label for="date" class="text">Дата:</label>
+                            <input type="date" name="date" id="date">
+                        </div>
 
-                <!-- button "Търси" for submitting the form -->
-                <img src="images/search.png" class="search-btn">
+                        <div class="interval-wrapper">
+                            <!-- The beggining of the time interval -->
+                            <div class="form-item">
+                                <label for="start-time" class="text">От:</label>
 
-                <!-- <div id="search-params">
+                                <!-- Its options are created dynamically -->
+                                <select name="start-time" id="start-time">
+                                </select>
+                            </div>
+
+                            <!-- The end of the time interval -->
+                            <div class="form-item">
+                                <label for="end-time" class="text">До:</label>
+
+                                <!-- Its options are created dynamically -->
+                                <select name="end-time" id="end-time">
+                                </select>
+                            </div>
+                        </div>
+
+                        <!-- button "Търси" for submitting the form -->
+                        <img src="images/search.png" class="search-btn">
+
+                        <!-- <div id="search-params">
                     <h2 class="text">Избран времеви интервал</h2>
                     <p>Дата: <span id="date-value">22.06.2021</span>; Интервал: <span id="start-time-value">7</span>&ndash;<span id="end-time-value">8</span></p>
                 </div> -->
-            </section>
+                    </section>
 
-            <!-- Response from the backend -->
-            <div id="response">
-            </div>
-        </form>
+                    <!-- Response from the backend -->
+                    <div id="response">
+                    </div>
+                </form>
             </div>
         </div>
 
