--- a/FMI_Parking_System/frontend/map/zones - Copy.html
+++ b/FMI_Parking_System/frontend/map/zones - Copy.html
@@ -23,8 +23,6 @@
 
                     <!-- First slide -->
                     <div class="mySlides fade" id="FMI">
-                        <!-- <div class="text">ФМИ</div> -->
-                        <!-- <img src="./images/fmi.png" class="zoomedZones border" alt="zoneA"> -->
                         <button class="space" id="A0">A<br>0</button>
                         <button class="space" id="A1">A<br>1</button>
                         <button class="space" id="A2">A<br>2</button>
@@ -35,7 +33,6 @@
                         <button class="space" id="A7">A<br>7</button>
                         <button class="space" id="A8">A<br>8</button>
                         <button class="space" id="A9">A<br>9</button>
-                        <!-- <div class="numbertext">1 / 3</div> -->
                     </div>
 
                     <!-- Second slide -->
@@ -56,9 +53,6 @@
                         <button class="space" id="B13">B<br>13</button>
                         <button class="space" id="B14">B<br>14</button>
                         <button class="space" id="B15">B<br>15</button>
-                        <!-- <div class="text">ФзФ</div>
-                <img src="./images/fzf.png" class="zoomedZones border" alt="zoneB">
-                <div class="numbertext">2 / 3</div> -->
                     </div>
 
                     <!-- Third slide -->
@@ -81,9 +75,6 @@
                         <button class="space" id="C15">C<br>15</button>
                         <button class="space" id="C16">C<br>16</button>
                         <button class="space" id="C17">C<br>17</button>
-                        <!-- <div class="text">ФХФ</div>
-                <img src="./images/fhf.png" class="zoomedZones border" alt="zoneC">
-                <div class="numbertext">3 / 3</div> -->
                     </div>
 
                     <!-- Pointers for next and previous slide -->
@@ -94,15 +85,12 @@
 
             <div class="right">
                 <h2 class="text">Изберете зона</h2>
+
                 <!-- Zone buttons -->
                 <div class="btn-container">
-
-                    <!--!! Да се сменят с бутони -->
-
-                    <img src="./images/zA.png" alt="btnA" class="btn" onclick="currentSlide(1)"></img>
-                    <img src="./images/zB.png" alt="btnB" class="btn" onclick="currentSlide(2)"></img>
-                    <img src="./images/zC.png" alt="btnC" class="btn" onclick="currentSlide(3)"></img>
-                    <!-- <img src="./images/zD.png" alt="btnD" class="btn" onclick="currentSlide(4)"></img> -->
+                    <img src="./images/buttonA.png" alt="btnA" class="btn" onclick="currentSlide(1)"></img>
+                    <img src="./images/buttonB.png" alt="btnB" class="btn" onclick="currentSlide(2)"></img>
+                    <img src="./images/buttonC.png" alt="btnC" class="btn" onclick="currentSlide(3)"></img>
                 </div>
 
                 <!-- Form for querying available places in a specific time period -->
@@ -146,8 +134,8 @@
 
                         <!-- !! Да се смени с бутон -->
 
-                        <img src="images/search.png" class="search-btn">
-                        
+                        <img src="images/search.png" class="search-btn" id="to-search">
+
                         <!-- !! Това какво е -->
 
                         <!-- <div id="search-params">
@@ -189,7 +177,6 @@
     <!-- Dimmer that is used when the confirmation box is displayed (it makes sure that only the confirmation box's options can be pressed and dims everything but the confirmation box)-->
     <div class="dimmer non-visible">
     </div>
-
     <!-- "Назад" button -->
     <aside>
         <!-- !! Да се смени с бутон -->
