--- a/FMI_Parking_System/frontend/map/zones - Copy.html
+++ b/FMI_Parking_System/frontend/map/zones - Copy.html
@@ -23,58 +23,58 @@
 
                     <!-- First slide -->
                     <div class="mySlides fade" id="FMI">
-                        <button class="space" id="A0">A<br>0</button>
-                        <button class="space" id="A1">A<br>1</button>
-                        <button class="space" id="A2">A<br>2</button>
-                        <button class="space" id="A3">A<br>3</button>
-                        <button class="space" id="A4">A<br>4</button>
-                        <button class="space" id="A5">A<br>5</button>
-                        <button class="space" id="A6">A<br>6</button>
-                        <button class="space" id="A7">A<br>7</button>
-                        <button class="space" id="A8">A<br>8</button>
-                        <button class="space" id="A9">A<br>9</button>
+                        <button class="space" id="A0" disabled>A<br>0</button>
+                        <button class="space" id="A1" disabled>A<br>1</button>
+                        <button class="space" id="A2" disabled>A<br>2</button>
+                        <button class="space" id="A3" disabled>A<br>3</button>
+                        <button class="space" id="A4" disabled>A<br>4</button>
+                        <button class="space" id="A5" disabled>A<br>5</button>
+                        <button class="space" id="A6" disabled>A<br>6</button>
+                        <button class="space" id="A7" disabled>A<br>7</button>
+                        <button class="space" id="A8" disabled>A<br>8</button>
+                        <button class="space" id="A9" disabled>A<br>9</button>
                     </div>
 
                     <!-- Second slide -->
                     <div class="mySlides fade" id="FZF">
-                        <button class="space" id="B0">B<br>0</button>
-                        <button class="space" id="B1">B<br>1</button>
-                        <button class="space" id="B2">B<br>2</button>
-                        <button class="space" id="B3">B<br>3</button>
-                        <button class="space" id="B4">B<br>4</button>
-                        <button class="space" id="B5">B<br>5</button>
-                        <button class="space" id="B6">B<br>6</button>
-                        <button class="space" id="B7">B<br>7</button>
-                        <button class="space" id="B8">B<br>8</button>
-                        <button class="space" id="B9">B<br>9</button>
-                        <button class="space" id="B10">B<br>10</button>
-                        <button class="space" id="B11">B<br>11</button>
-                        <button class="space" id="B12">B<br>12</button>
-                        <button class="space" id="B13">B<br>13</button>
-                        <button class="space" id="B14">B<br>14</button>
-                        <button class="space" id="B15">B<br>15</button>
+                        <button class="space" id="B0" disabled>B<br>0</button>
+                        <button class="space" id="B1" disabled>B<br>1</button>
+                        <button class="space" id="B2" disabled>B<br>2</button>
+                        <button class="space" id="B3" disabled>B<br>3</button>
+                        <button class="space" id="B4" disabled>B<br>4</button>
+                        <button class="space" id="B5" disabled>B<br>5</button>
+                        <button class="space" id="B6" disabled>B<br>6</button>
+                        <button class="space" id="B7" disabled>B<br>7</button>
+                        <button class="space" id="B8" disabled>B<br>8</button>
+                        <button class="space" id="B9" disabled>B<br>9</button>
+                        <button class="space" id="B10" disabled>B<br>10</button>
+                        <button class="space" id="B11" disabled>B<br>11</button>
+                        <button class="space" id="B12" disabled>B<br>12</button>
+                        <button class="space" id="B13" disabled>B<br>13</button>
+                        <button class="space" id="B14" disabled>B<br>14</button>
+                        <button class="space" id="B15" disabled>B<br>15</button>
                     </div>
 
                     <!-- Third slide -->
                     <div class="mySlides fade" id="FHF">
-                        <button class="space" id="C0">C<br>0</button>
-                        <button class="space" id="C1">C<br>1</button>
-                        <button class="space" id="C2">C<br>2</button>
-                        <button class="space" id="C3">C<br>3</button>
-                        <button class="space" id="C4">C<br>4</button>
-                        <button class="space" id="C5">C<br>5</button>
-                        <button class="space" id="C6">C<br>6</button>
-                        <button class="space" id="C7">C<br>7</button>
-                        <button class="space" id="C8">C<br>8</button>
-                        <button class="space" id="C9">C<br>9</button>
-                        <button class="space" id="C10">C<br>10</button>
-                        <button class="space" id="C11">C<br>11</button>
-                        <button class="space" id="C12">C<br>12</button>
-                        <button class="space" id="C13">C<br>13</button>
-                        <button class="space" id="C14">C<br>14</button>
-                        <button class="space" id="C15">C<br>15</button>
-                        <button class="space" id="C16">C<br>16</button>
-                        <button class="space" id="C17">C<br>17</button>
+                        <button class="space" id="C0" disabled>C<br>0</button>
+                        <button class="space" id="C1" disabled>C<br>1</button>
+                        <button class="space" id="C2" disabled>C<br>2</button>
+                        <button class="space" id="C3" disabled>C<br>3</button>
+                        <button class="space" id="C4" disabled>C<br>4</button>
+                        <button class="space" id="C5" disabled>C<br>5</button>
+                        <button class="space" id="C6" disabled>C<br>6</button>
+                        <button class="space" id="C7" disabled>C<br>7</button>
+                        <button class="space" id="C8" disabled>C<br>8</button>
+                        <button class="space" id="C9" disabled>C<br>9</button>
+                        <button class="space" id="C10" disabled>C<br>10</button>
+                        <button class="space" id="C11" disabled>C<br>11</button>
+                        <button class="space" id="C12" disabled>C<br>12</button>
+                        <button class="space" id="C13" disabled>C<br>13</button>
+                        <button class="space" id="C14" disabled>C<br>14</button>
+                        <button class="space" id="C15" disabled>C<br>15</button>
+                        <button class="space" id="C16" disabled>C<br>16</button>
+                        <button class="space" id="C17" disabled>C<br>17</button>
                     </div>
 
                     <!-- Pointers for next and previous slide -->
@@ -185,21 +185,21 @@
 
     <!-- !! Да се махне като се оправи оцветяването на бутоните  -->
     <script>
-        let buttons = document.querySelectorAll(".space");
+        // let buttons = document.querySelectorAll(".space");
 
-        // Set an event handler on the document so that when
-        // any element is clicked, the event will bubble up to it
-        document.addEventListener("click", function (evt) {
-            // Check to see if it was a button that was clicked
-            if (evt.target.classList.contains("space")) {
-                // Loop over all the buttons & remove the active class
-                buttons.forEach(function (button) {
-                    button.classList.remove("active");
-                });
-                // Make the clicked button have the active class
-                evt.target.classList.add("active");
-            }
-        });
+        // // Set an event handler on the document so that when
+        // // any element is clicked, the event will bubble up to it
+        // document.addEventListener("click", function (evt) {
+        //     // Check to see if it was a button that was clicked
+        //     if (evt.target.classList.contains("space")) {
+        //         // Loop over all the buttons & remove the active class
+        //         buttons.forEach(function (button) {
+        //             button.classList.remove("active");
+        //         });
+        //         // Make the clicked button have the active class
+        //         evt.target.classList.add("active");
+        //     }
+        // });
     </script>
 </body>
 
