frontend/map folder cleaned + check_slot.php, reserve_slot.php

--- a/FMI_Parking_System/frontend/account/account_view.html
+++ b/FMI_Parking_System/frontend/account/account_view.html
@@ -187,7 +187,7 @@
               <li>Физически факултет (Зона В)</li>
               <li>Факултет по химия и фармация (Зона С)</li>
             </ul>
-            <p>За да запазите паркомясто преминете към <a href="../map/zones - Copy.html">"Запази паркомясто"</a>.</p>
+            <p>За да запазите паркомясто преминете към <a href="../map/zones.html">"Запази паркомясто"</a>.</p>
           </section>
         </article>
       </section>
